@@ -1,1 +1,1 @@
-10.5.0-rc2
+10.5.0
