@@ -1,3 +1,7 @@
+2012-06-04  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.5.0 Released.
+
 2012-05-30  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.5.0-rc2 Released.
